--- a/package.json
+++ b/package.json
@@ -8,10 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "cropperjs": "^1.5.12",
+    "dayjs": "^1.11.0",
+    "json-bigint": "^1.0.0",
+    "lodash": "^4.17.21",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.0.0",
     "vant": "^2.12.45",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-socket.io": "^3.0.10",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -30,6 +39,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
+    "postcss-pxtorem": "^6.0.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
